Enables use of a local ES instance with auth disabled